<resources>
    <string name="app_name">SharedList</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="user">User</string>
    <string name="date_created">Date Created</string>
    <string name="date_preview">Date Preview</string>
    <string name="logout">Logout</string>
    <string name="add_task">Add Task</string>
    <string name="title_register">Title</string>
    <string name="user_register">User</string>
    <string name="description_register">Description</string>
    <string name="date_created_register">Date Created</string>
    <string name="btn_save">Save</string>
    <string name="edit_task">Edit Task</string>
    <string name="remove_task">Remove Task</string>
    <string name="detail_task">Detail Task</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="repetir_senha">Repetir senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="enviar_email">Enviar email</string>
    <string name="email">Email</string>
</resources>